Created Ice God
Created Craft studio model and a walking and attacking animation

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
 buildscript {
     repositories {
         jcenter()
-        maven { url = "http://files.minecraftforge.net/maven" }
+        maven { url = "http://files.minecraftforge.net/maven" 
+        	url = "http://maven.leviathan-studio.com/artifactory/leviathan/" 
+	}
+
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
@@ -38,7 +41,7 @@ dependencies {
     // or you may define them like so..
     //compile "some.group:artifact:version:classifier"
     //compile "some.group:artifact:version"
-      
+      compile 'com.leviathanstudio:CraftStudio:1.0.0.93-mc1.12-alpha:dev'
     // real examples
     //compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
     //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
