--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 
 
 version = "1.0"
-group = "com.calebrudolph.ctoiafm" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "Tale_of_Ice_and_Fire"
+group = "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "modid"
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 compileJava {
@@ -21,7 +21,7 @@ compileJava {
 }
 
 minecraft {
-    version = "1.12-14.21.1.2426"
+    version = "1.12-14.21.1.2443"
     runDir = "run"
     
     // the mappings can be changed at any time, and must be in the following format.
